syntax = "proto3";

package deliveryApi.grpc2;

option csharp_namespace = "deliveryApi.grpc2";

import "models/response_model.proto";

service ItemsService {
	rpc GetItem(.deliveryApi.grpc2.ItemsServiceRequest) returns (ResponseModel);
	rpc GetItems(.deliveryApi.grpc2.ItemsServiceRequest) returns (ResponseModel);
	rpc GetItemsFeed(.deliveryApi.grpc2.ItemsServiceRequest) returns (ResponseModel);

	rpc Pokus(.deliveryApi.grpc2.ItemsServiceRequest) returns (.deliveryApi.grpc2.PokusResponse);
}

message ItemsServiceRequest {
	string project_id = 1;
	string codename = 2;
}

message PokusResponse {
	string project_id = 1;
	string codename = 2;
}